--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
