--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3.8"
 
 services:
-  app:
-    build: .
-    ports:
-      - "${PORT}:${PORT}"
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
-    depends_on:
-      - db
-    networks:
-      - app-network
+  # app:
+  #   build: .
+  #   ports:
+  #     - "${PORT}:${PORT}"
+  #   environment:
+  #     - DB_HOST=${DB_HOST}
+  #     - DB_PORT=${DB_PORT}
+  #     - DB_USER=${DB_USER}
+  #     - DB_PASSWORD=${DB_PASSWORD}
+  #     - DB_NAME=${DB_NAME}
+  #   depends_on:
+  #     - db
+  #   networks:
+  #     - app-network
 
   db:
     image: mysql:latest
