--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
+    "@prisma/client": "^5.19.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.0",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.4",
