--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,11 @@
 version: "3.8"
 
 services:
-  app:
-    build: .
-    ports:
-      - "${PORT}:${PORT}"
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
-    depends_on:
-      - db
-    networks:
-      - app-network
-
   db:
     image: mysql:latest
+    container_name: database
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
@@ -27,11 +13,17 @@ services:
       - "${DB_PORT}:3306"
     volumes:
       - db_data:/var/lib/mysql
-    networks:
-      - app-network
+
+  app:
+    build: .
+    container_name: shopper-app
+    ports:
+      - "${PORT}:${PORT}"
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+    depends_on:
+      - db
+    command: sh -c "npx prisma generate && npx prisma migrate deploy && npm start"
 
 volumes:
   db_data:
-
-networks:
-  app-network:
