--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
-    "mysql": "^2.18.1",
-    "sequelize": "^6.37.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -23,6 +22,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "npx ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
